--- a/html/exam/ex2_re.html
+++ b/html/exam/ex2_re.html
@@ -4,7 +4,7 @@
 		<meta charset='utf-8'>
         <link rel="stylesheet" type="text/css" href="mobile_slide.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="mobile_slide.js"></script>
+        <script src="mobile_slide_re.js"></script>
 	</head>
 	<body>
         <header>상단</header>
